refine the frontend display of the homepage and reviews list

--- a/_static-build/index.htm
+++ b/_static-build/index.htm
@@ -49,7 +49,7 @@
 
         <div class="content">
             <div class="page-bound">
-                <h3 class="align-center">More things:</h3>
+                <h4 class="home-more-title">More things:</h4>
                 <ul class="post-list margin-large">
                     <li class="post-list__item">
                         <a href="review.htm" class="post-list__anchor">
@@ -57,7 +57,7 @@
                             <h3 class="post-list__title">Rittenhouse</h3>
                             <h3 class="post-list__subtitle">25-year Rye</h3>
                             <p class="post-list__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, provident?</p>
-                            <img src="http://lorempixel.com/600/900" alt="" class="post-list__image" />
+                            <img src="http://lorempixel.com/280/366" alt="" class="post-list__image" />
                         </a>
                     </li>
                     <li class="post-list__item">
@@ -66,7 +66,7 @@
                             <h3 class="post-list__title">Elijah Craig</h3>
                             <h3 class="post-list__subtitle">Small Batch NAS</h3>
                             <p class="post-list__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, neque?</p>
-                            <img src="http://lorempixel.com/599/900" alt="" class="post-list__image" />
+                            <img src="http://lorempixel.com/274/300" alt="" class="post-list__image" />
                         </a>
                     </li>
                     <li class="post-list__item">
@@ -75,7 +75,7 @@
                             <h3 class="post-list__title">Westland</h3>
                             <h3 class="post-list__subtitle">Sherry Wood</h3>
                             <p class="post-list__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, perspiciatis.</p>
-                            <img src="http://lorempixel.com/598/900" alt="" class="post-list__image" />
+                            <img src="http://lorempixel.com/283/376" alt="" class="post-list__image" />
                         </a>
                     </li>
                     <li class="post-list__item">
@@ -84,7 +84,7 @@
                             <h3 class="post-list__title">Westland</h3>
                             <h3 class="post-list__subtitle">Original Single-Malt</h3>
                             <p class="post-list__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem, harum.</p>
-                            <img src="http://lorempixel.com/597/900" alt="" class="post-list__image" />
+                            <img src="http://lorempixel.com/252/378" alt="" class="post-list__image" />
                         </a>
                     </li>
                     <li class="post-list__item">
@@ -92,7 +92,7 @@
                             <span class="post-list__label">Article</span>
                             <h3 class="post-list__title">Tasting Whiskey Effectively</h3>
                             <p class="post-list__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem, harum.</p>
-                            <img src="http://lorempixel.com/596/900" alt="" class="post-list__image" />
+                            <img src="http://lorempixel.com/295/394" alt="" class="post-list__image" />
                         </a>
                     </li>
                     <li class="post-list__item">
@@ -101,7 +101,7 @@
                             <h3 class="post-list__title">Colonel E.H. Taylor</h3>
                             <h3 class="post-list__subtitle">Barrel Proof, Batch 3</h3>
                             <p class="post-list__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus, neque.</p>
-                            <img src="http://lorempixel.com/595/900" alt="" class="post-list__image" />
+                            <img src="http://lorempixel.com/259/380" alt="" class="post-list__image" />
                         </a>
                     </li>
                 </ul>
