--- a/_static-build/reviews.htm
+++ b/_static-build/reviews.htm
@@ -58,9 +58,8 @@
         <div class="search-layout">
             <button type="button" class="search-refine__toggle" data-toggle-target="next">Refine &gt;</button>
             <div class="search-refine">
-                <h2 class="search-refine__title">Show reviews by &hellip;</h2>
                 <div class="grid">
-                    <div class="search-refine__facet grid__unit grid__unit--1-2-s grid__unit--1-3-m grid__unit--1-1-l grid__unit--1-2-w">
+                    <div class="search-refine__facet grid__unit grid__unit--1-2-s grid__unit--1-3-m grid__unit--1-1-l">
                         <h3 class="search-refine__facet__title">Type</h3>
                         <ul class="search-refine__facet__list">
                             <li class="search-refine__facet__item"><a href="#0">American single-malt</a></li>
@@ -71,7 +70,7 @@
                             <li class="search-refine__facet__item"><a href="#0">World</a></li>
                         </ul>
                     </div>
-                    <div class="search-refine__facet grid__unit grid__unit--1-2-s grid__unit--1-3-m grid__unit--1-1-l grid__unit--1-2-w">
+                    <div class="search-refine__facet grid__unit grid__unit--1-2-s grid__unit--1-3-m grid__unit--1-1-l">
                         <h3 class="search-refine__facet__title">Age</h3>
                         <ul class="search-refine__facet__list">
                             <li class="search-refine__facet__item"><a href="#0">Unknown / no age statement</a></li>
@@ -82,7 +81,7 @@
                             <li class="search-refine__facet__item is-current">Over 15 years</li>
                         </ul>
                     </div>
-                    <div class="search-refine__facet grid__unit grid__unit--1-2-s grid__unit--1-3-m grid__unit--1-1-l grid__unit--1-2-w">
+                    <div class="search-refine__facet grid__unit grid__unit--1-2-s grid__unit--1-3-m grid__unit--1-1-l">
                         <h3 class="search-refine__facet__title">Distiller</h3>
                         <ul class="search-refine__facet__list">
                             <li class="search-refine__facet__item"><a href="#0">American craft distilleries</a></li>
@@ -97,7 +96,7 @@
                             <li class="search-refine__facet__item"><a href="#0">Other</a></li>
                         </ul>
                     </div>
-                    <div class="search-refine__facet grid__unit grid__unit--1-2-s grid__unit--1-3-m grid__unit--1-1-l grid__unit--1-2-w">
+                    <div class="search-refine__facet grid__unit grid__unit--1-2-s grid__unit--1-3-m grid__unit--1-1-l">
                         <h3 class="search-refine__facet__title">Proof</h3>
                         <ul class="search-refine__facet__list">
                             <li class="search-refine__facet__item"><a href="#0">80</a></li>
@@ -106,7 +105,7 @@
                             <li class="search-refine__facet__item is-current">Over 100</li>
                         </ul>
                     </div>
-                    <div class="search-refine__facet grid__unit grid__unit--1-2-s grid__unit--1-3-m grid__unit--1-1-l grid__unit--1-2-w">
+                    <div class="search-refine__facet grid__unit grid__unit--1-2-s grid__unit--1-3-m grid__unit--1-1-l">
                         <h3 class="search-refine__facet__title">Price (MSRP)</h3>
                         <ul class="search-refine__facet__list">
                             <li class="search-refine__facet__item"><a href="#0">Under $25</a></li>
@@ -116,13 +115,13 @@
                             <li class="search-refine__facet__item"><a href="#0">Over $150</a></li>
                         </ul>
                     </div>
-                    <div class="search-refine__facet grid__unit grid__unit--1-2-s grid__unit--1-3-m grid__unit--1-1-l grid__unit--1-2-w">
+                    <div class="search-refine__facet grid__unit grid__unit--1-2-s grid__unit--1-3-m grid__unit--1-1-l">
                         <h3 class="search-refine__facet__title">Rarity</h3>
                         <ul class="search-refine__facet__list">
                             <li class="search-refine__facet__item is-current">Common</li>
                             <li class="search-refine__facet__item"><a href="#0">Uncommon</a></li>
                             <li class="search-refine__facet__item"><a href="#0">Hard to find</a></li>
-                            <li class="search-refine__facet__item"><a href="#0">Ridiculously rare</a></li>
+                            <li class="search-refine__facet__item"><a href="#0">Not happening</a></li>
                         </ul>
                     </div>
                 </div>
