Refine static build

--- a/_static-build/index.htm
+++ b/_static-build/index.htm
@@ -121,7 +121,7 @@
 
     <footer class="page-footer" role="contentinfo">
         <div class="page-bound">
-            <p>&copy; 2016 Tim Gavlick. <a href="colophon.htm">Colophon</a></p>
+            <p>Site, content, photography &copy; 2016 Tim Gavlick. <a href="colophon.htm">Colophon</a>, <a href="https://github.com/tjgavlick/whiskey-blog" target="_blank">GitHub</a></p>
         </div>
     </footer><!-- .review -->
 
