--- a/_static-build/review.htm
+++ b/_static-build/review.htm
@@ -126,6 +126,13 @@
                     <a href="#0">Rittenhouse Bottled-in-Bond Rye</a>
                 </p>
             </aside>
+
+            <p class="article-reference">
+                <a href="ethics.htm">Review ethics</a>
+                <a href="ratings.htm">Rating scale</a>
+                <a href="glossary.htm">Lingo</a>
+            </p>
+
         </section>
 
     </article>
@@ -133,7 +140,7 @@
 
     <footer class="page-footer page-footer--article" role="contentinfo">
         <div class="page-bound">
-            <p>&copy; 2016 Tim Gavlick. <a href="colophon.htm">Colophon</a></p>
+            <p>Site, content, photography &copy; 2016 Tim Gavlick. <a href="colophon.htm">Colophon</a>, <a href="https://github.com/tjgavlick/whiskey-blog" target="_blank">GitHub</a></p>
         </div>
     </footer><!-- .review -->
 
