--- a/_static-build/reviews.htm
+++ b/_static-build/reviews.htm
@@ -45,18 +45,18 @@
             <h1 class="title-bar__title">Reviews</h1>
 
             <div class="title-bar__related">
-                <a href="#0" class="title-bar__related__item">Review ethics</a>
-                <a href="#0" class="title-bar__related__item">What I like</a>
-                <a href="#0" class="title-bar__related__item">Lingo</a>
+                <a href="ethics.htm" class="title-bar__related__item">Review ethics</a>
+                <a href="ratings.htm" class="title-bar__related__item">Rating scale</a>
+                <a href="glossary.htm" class="title-bar__related__item">Lingo</a>
             </div>
         </header>
 
         <div class="search-current-filters">
-            <p>Showing <a href="#0">common (x)</a> <a href="#0">bourbons (x)</a> <a href="#0">over 16 years of age (x)</a> distilled by <a href="#0">Buffalo Trace (x)</a>, bottled at <a href="#0">over 100 proof (x)</a>, and sold for <a href="#0">$25 &ndash; $40 (x)</a>. You can <a href="#0">remove all these filters</a> if you'd like.</p>
+            <p>Showing <a href="#0" class="search-current-filters__close">common</a> <a href="#0" class="search-current-filters__close">bourbons</a> <a href="#0" class="search-current-filters__close">over 16 years of age</a> distilled by <a href="#0" class="search-current-filters__close">Buffalo Trace</a>, bottled at <a href="#0" class="search-current-filters__close">over 100 proof</a>, and sold for <a href="#0" class="search-current-filters__close">$25 &ndash; $40</a>. You can <a href="#0" class="search-current-filters__close">remove all these filters</a> if you'd like.</p>
         </div>
 
         <div class="search-layout">
-            <button type="button" class="search-refine__toggle" data-toggle-target="next">Refine &gt;</button>
+            <button type="button" class="search-refine__toggle" data-toggle-target="next">Refine <img src="images/arrow-right.png" alt="" class="search-refine__toggle__arrow" /></button>
             <div class="search-refine">
                 <div class="grid">
                     <div class="search-refine__facet grid__unit grid__unit--1-2-s grid__unit--1-3-m grid__unit--1-1-l">
@@ -262,7 +262,7 @@
 
     <footer class="page-footer" role="contentinfo">
         <div class="page-bound">
-            <p>&copy; 2016 Tim Gavlick. <a href="colophon.htm">Colophon</a></p>
+            <p>Site, content, photography &copy; 2016 Tim Gavlick. <a href="colophon.htm">Colophon</a>, <a href="https://github.com/tjgavlick/whiskey-blog" target="_blank">GitHub</a></p>
         </div>
     </footer><!-- .review -->
 
