Add a review posting interface to static build
This is maybe what a simple blog backend would center around. I'll also
need pages for listing existing posts in order to edit them. Asset
browser is in the wishlist.

--- a/_static-build/review.htm
+++ b/_static-build/review.htm
@@ -97,7 +97,7 @@
             <p>That's great for us &mdash; not many hyper-aged ryes tend to make it to market. The ones that do are almost universally excellent.</p>
             <p>The 25-year is the last-released of the stocks from this set, following 21- and 23-year expressions. All the barrels were aged on floor 1 of rickhouse 00.</p>
 
-            <h2>Nose <span class="title-note">(light, oaky, brown sugar, caramel, fennel)</span></h2>
+            <h2>Nose (light, oaky, brown sugar, caramel, fennel)</h2>
 
             <p>Hnng.</p>
 
