--- a/_static-build/colophon.htm
+++ b/_static-build/colophon.htm
@@ -65,9 +65,9 @@ It's typeset in <a href="https://www.google.com/fonts/specimen/Lora" target="_bl
 under the SIL Open Font
 License. Photographs
 were taken with
-a Sony NEX-6.
-Additional graphics
-work was done in <a href="http://www.sketchapp.com/" target="_blank">Sketch</a>.
+a Sony NEX-6,
+and design was in
+<a href="http://www.sketchapp.com/" target="_blank">Sketch</a>. Find me on <a href="https://github.com/tjgavlick/whiskey-blog" target="_blank">GitHub</a>
                 </pre>
 
             </div>
@@ -78,7 +78,7 @@ work was done in <a href="http://www.sketchapp.com/" target="_blank">Sketch</a>.
 
     <footer class="page-footer" role="contentinfo">
         <div class="page-bound">
-            <p>Site, content, photography &copy; 2016 Tim Gavlick. <a href="colophon.htm">Colophon</a>, <a href="https://github.com/tjgavlick/whiskey-blog" target="_blank">GitHub</a></p>
+            <p>Site, content, photography &copy; 2016 Tim Gavlick. <a href="colophon.htm">Colophon</a></p>
         </div>
     </footer><!-- .review -->
 
